// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVGArc helpers drawArc works correctly for 0 degree angle 1`] = `
"
      M 6.123233995736766e-15 -100
      A 100 100 0 0 0 6.123233995736766e-15 -100
      Z
  "
`;

exports[`SVGArc helpers drawArc works correctly for 90 degree angle 1`] = `
"
      M 100 0
      A 100 100 0 0 0 6.123233995736766e-15 -100
      
  "
`;

exports[`SVGArc helpers drawArc works correctly for 180 degree angle 1`] = `
"
      M 6.123233995736766e-15 100
      A 100 100 0 0 0 6.123233995736766e-15 -100
      
  "
`;

exports[`SVGArc helpers drawArc works correctly for 270 degree angle 1`] = `
"
      M -100 1.2246467991473532e-14
      A 100 100 0 1 0 6.123233995736766e-15 -100
      
  "
`;

exports[`SVGArc helpers drawArc works correctly for 360 degree angle 1`] = `
"
      M -1.8369701987210297e-14 -100
      A 100 100 0 1 0 6.123233995736766e-15 -100
      Z
  "
`;
